--- a/namu_darbai_1.ipynb
+++ b/namu_darbai_1.ipynb
@@ -4,131 +4,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Iš pirmų 100 skaičių, jeigu skaičius dalinasi iš 2 be liekanos, atspausdinkite ‘Fizz’, jeigu skaičius dalinasi iš 3 be liekanos atspausdinkite ‘Buzz’, jei skaičius dalinasi iš 2 ir 3 be liekanos, atspausdinkite ‘FizzBuzz’"
+    "1. Iš pirmų 100 skaičių, jeigu skaičius dalinasi iš 2 be liekanos, atspausdinkite ‘Fizz’, jeigu skaičius dalinasi iš 3 be liekanos atspausdinkite ‘Buzz’, jei skaičius dalinasi iš 2 ir 3 be liekanos, atspausdinkite ‘FizzBuzz’"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for FizzBuzz in range(1,101):\n",
+    "    if (FizzBuzz % 2 == 0 and FizzBuzz % 3 == 0):\n",
+    "        print(\"FizzBuzz\")\n",
+    "    elif(FizzBuzz % 2 == 0 ):\n",
+    "        print(\"Fizz\")\n",
+    "    elif(FizzBuzz % 3 == 0 ):\n",
+    "        print(\"Buzz\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Leiskite vartotojui pasirinkti skaičių, jeigu įvestas skaičius yra daugiau arba lygus 10, atspausdinkite visus skaičius iki pateikto skaičiaus, kurie dalinasi iš 5 su liekana"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "skaicius = input('iveskite skaiciu')\n",
+    "skaicius = float (skaicius)\n",
+    "if (skaicius) >=10:\n",
+    "       print(skaicius)\n",
+    "       print(range(skaicius))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "fizz\n",
-      "buzz\n",
-      "fizz\n",
-      "5\n",
-      "fizzbuzz\n",
-      "7\n",
-      "fizz\n",
-      "buzz\n",
-      "fizz\n",
-      "11\n",
-      "fizzbuzz\n",
-      "13\n",
-      "fizz\n",
-      "buzz\n",
-      "fizz\n",
-      "17\n",
-      "fizzbuzz\n",
-      "19\n",
-      "fizz\n",
-      "buzz\n",
-      "fizz\n",
-      "23\n",
-      "fizzbuzz\n",
-      "25\n",
-      "fizz\n",
-      "buzz\n",
-      "fizz\n",
-      "29\n",
-      "fizzbuzz\n",
-      "31\n",
-      "fizz\n",
-      "buzz\n",
-      "fizz\n",
-      "35\n",
-      "fizzbuzz\n",
-      "37\n",
-      "fizz\n",
-      "buzz\n",
-      "fizz\n",
-      "41\n",
-      "fizzbuzz\n",
-      "43\n",
-      "fizz\n",
-      "buzz\n",
-      "fizz\n",
-      "47\n",
-      "fizzbuzz\n",
-      "49\n",
-      "fizz\n",
-      "buzz\n",
-      "fizz\n",
-      "53\n",
-      "fizzbuzz\n",
-      "55\n",
-      "fizz\n",
-      "buzz\n",
-      "fizz\n",
-      "59\n",
-      "fizzbuzz\n",
-      "61\n",
-      "fizz\n",
-      "buzz\n",
-      "fizz\n",
-      "65\n",
-      "fizzbuzz\n",
-      "67\n",
-      "fizz\n",
-      "buzz\n",
-      "fizz\n",
-      "71\n",
-      "fizzbuzz\n",
-      "73\n",
-      "fizz\n",
-      "buzz\n",
-      "fizz\n",
-      "77\n",
-      "fizzbuzz\n",
-      "79\n",
-      "fizz\n",
-      "buzz\n",
-      "fizz\n",
-      "83\n",
-      "fizzbuzz\n",
-      "85\n",
-      "fizz\n",
-      "buzz\n",
-      "fizz\n",
-      "89\n",
-      "fizzbuzz\n",
-      "91\n",
-      "fizz\n",
-      "buzz\n",
-      "fizz\n",
-      "95\n",
-      "fizzbuzz\n",
-      "97\n",
-      "fizz\n",
-      "buzz\n",
-      "fizz\n"
+      "[10, 5, 45, 79, 33, 22, 11]\n"
      ]
     }
    ],
    "source": [
-    "for fizzbuzz in range(1,101):\n",
-    "    if (fizzbuzz % 2 == 0 and fizzbuzz % 3 == 0):\n",
-    "        print(\"fizzbuzz\")\n",
-    "    elif(fizzbuzz%2 == 0):\n",
-    "        print(\"fizz\")\n",
-    "    elif(fizzbuzz%3 == 0):\n",
-    "        print(\"buzz\")\n",
-    "    else:\n",
-    "        print(fizzbuzz)"
+    "list = [10, 5, 45, 79, 33, 22, 11]\n",
+    "print(list)\n",
+    "list=input (\"Pasirinkite skaiciu is saraso:\")\n",
+    "\n"
    ]
   }
  ],
