--- a/namu_darbai_1.ipynb
+++ b/namu_darbai_1.ipynb
@@ -13,12 +13,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for FizzBuzz in range(1,101):\n",
-    "    if (FizzBuzz % 2 == 0 and FizzBuzz % 3 == 0):\n",
+    "for number in range(1,101):\n",
+    "    if (number % 2 == 0 and number % 3 == 0):\n",
     "        print(\"FizzBuzz\")\n",
-    "    elif(FizzBuzz % 2 == 0 ):\n",
+    "    elif(number % 2 == 0 ):\n",
     "        print(\"Fizz\")\n",
-    "    elif(FizzBuzz % 3 == 0 ):\n",
+    "    elif(number % 3 == 0 ):\n",
     "        print(\"Buzz\")"
    ]
   },
@@ -31,37 +31,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "skaicius = input('iveskite skaiciu')\n",
-    "skaicius = float (skaicius)\n",
-    "if (skaicius) >=10:\n",
-    "       print(skaicius)\n",
-    "       print(range(skaicius))\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[10, 5, 45, 79, 33, 22, 11]\n"
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n"
      ]
     }
    ],
    "source": [
-    "list = [10, 5, 45, 79, 33, 22, 11]\n",
-    "print(list)\n",
-    "list=input (\"Pasirinkite skaiciu is saraso:\")\n",
-    "\n"
+    "number = int (input ('iveskite skaiciu'))\n",
+    "if number >=10 :\n",
+    "    for i in range ( number ) :\n",
+    "        if  (i % 5 != 0) :\n",
+    "            print ((i))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
