--- a/namu_darbai_1.ipynb
+++ b/namu_darbai_1.ipynb
@@ -31,35 +31,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "number = int (input ('iveskite skaiciu'))\n",
     "if number >=10 :\n",
     "    for i in range ( number ) :\n",
-    "        if  (i % 5 != 0) :\n",
+    "        if (i % 5 != 0) :\n",
     "            print ((i))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Koks yra sąrašo ilgis sudaryto iš pateiktų sąrašų kombinacijų, jeigu norime rasti visas įmanomas reikšmes? Išrikiuokite sąrašą nuo didžiausios iki mažiausios reikšmės (teks atlikti papildomų veiksmų tam atlikti teisingai)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = ['1','2','3','4','5']\n",
+    "b = ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos']\n",
+    "c = ['100', '200', 40, 10]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
