--- a/lesson_1.ipynb
+++ b/lesson_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -42,20 +42,58 @@
    ],
    "source": [
     "num = 156\n",
-    "print (num + 5 - 1056)\n",
-    "print (text)"
+    "print(num + 5 - 1056)\n",
+    "print(text)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "STRING sutrump STR"
+    "# Kintamuju pavadinimai"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1st_name = 'Darius' # negali prasideti skaiciumi\n",
+    "name_1 = 'Darius'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n",
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sum([1 , 2, 5, 8]) )\n",
+    "# sum = 0 # nebeveiks sum() funkcija. Visos standartines funkcijos: https://docs.python.org/3/library/functions.html\n",
+    "# reikia \n",
+    "print(sum([1 , 2, 5, 8]) )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# String"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -80,62 +118,21 @@
      "output_type": "stream",
      "text": [
       "o\n",
+      "h\n",
       "w\n",
       "d\n",
-      "d\n"
+      "d\n",
+      "l\n"
      ]
     }
    ],
    "source": [
-    "print (text[4])\n",
-    "print (text[6])\n",
-    "print (text[10])\n",
-    "print (text[-1]) #tas pats kas text 10, t.y. duok man paskutine raide su -1; -2; -3"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "SLICING"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello\n",
-      "beautiful\n",
-      "beautiful wor\n",
-      "beautiful word\n",
-      "batfl\n",
-      "drow lufituaeb olleh\n"
-     ]
-    }
-   ],
-   "source": [
-    "text_2 = \"hello beautiful word\"\n",
-    "print (text_2[0:5])\n",
-    "print (text_2[6:15])\n",
-    "print (text_2[6:-1]) #bet neitraukia d raides\n",
-    "print (text_2[6:]) #nieko nerasant itraukia zodzius iki galo\n",
-    "print (text_2[6:15:2])\n",
-    "\n",
-    "#SLICING [START:END:STEP]\n",
-    "\n",
-    "print (text_2[::-1]) #apsuka teksta\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##Operations"
+    "print (text[4] ) # indexing\n",
+    "print (text[0] )\n",
+    "print (text[6] )\n",
+    "print (text[10] )\n",
+    "print (text[-1] ) # tas pats kas text[10]\n",
+    "print (text[-2] )"
    ]
   },
   {
@@ -144,23 +141,109 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t\n",
+      "d\n"
+     ]
+    }
+   ],
+   "source": [
+    "text_2 = \"hello beautiful world\"\n",
+    "print (text_2[10] )\n",
+    "print (text_2[-1] )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Slicing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n",
+      "hello\n",
+      "beautiful\n",
+      "beautiful worl\n",
+      "beautiful world\n",
+      "batfl\n",
+      "dlrow lufituaeb olleh\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (text_2[0:5] )\n",
+    "print (text_2[:5] ) # 0 nera butinas\n",
+    "print (text_2[6:15] )\n",
+    "print (text_2[6:-1] ) # neitraukia 'd' raides\n",
+    "print (text_2[6:] )\n",
+    "print (text_2[6:15:2] ) \n",
+    "# slicing [start:end:step]\n",
+    "# apsukti teksta\n",
+    "print (text_2[::-1] )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## operations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
-       "'hello world hello beautiful word'"
+       "'hello world hello beautiful world'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "text + ' ' + text_2  #minusuot negalima"
+    "text + ' ' + text_2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for -: 'str' and 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_14328/1551434150.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtext_2\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mtext\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'str' and 'str'"
+     ]
+    }
+   ],
+   "source": [
+    "text_2 - text # negalima"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +252,7 @@
        "'hi hi hi hi hi hi hi hi hi hi '"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,14 +260,35 @@
    "source": [
     "'hi ' * 10"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for /: 'str' and 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_14328/2290889518.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;34m'hi '\u001b[0m \u001b[1;33m/\u001b[0m \u001b[1;34m'i'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for /: 'str' and 'str'"
+     ]
+    }
+   ],
+   "source": [
+    "'hi ' / 'i' # negalima"
+   ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+   "hash": "8c46c6c26e2733b62f4307cda0d230a15e363bc8de6d84ecceb81eda1bb129bc"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.9 64-bit",
+   "display_name": "Python 3.7.9 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -198,7 +302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.7.9"
   },
   "orig_nbformat": 4
  },
