--- a/namu_darbai_2.ipynb
+++ b/namu_darbai_2.ipynb
@@ -76,19 +76,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Paskaičiuoti pelną pardavus visas prekes. Informacija apie kainą ir kiekius yra pateikiama  kaip dictionary, atsakymą suapvalinti iki 2 skaičių po kablelio\n",
-    "x = { \"cost_price\": 32.67,\n",
-    "         \"sell_price\": 45.00,      \n",
-    "          “inventory\": 1212  }"
+    "3. Paskaičiuoti pelną pardavus visas prekes. Informacija apie kainą ir kiekius yra pateikiama  kaip dictionary, atsakymą suapvalinti iki 2 skaičių po kablelio\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14944\n"
+     ]
+    }
+   ],
    "source": [
-    "my_dict "
+    "x = { \"cost_price\": 32.67,\n",
+    "         \"sell_price\": 45.00,      \n",
+    "          \"inventory\": 1212 }\n",
+    "markup = (x[\"sell_price\"] - x[\"cost_price\"])\n",
+    "profit = markup * (x[\"inventory\"])\n",
+    "profit = round(profit)\n",
+    "print(profit)\n",
+    "\n"
    ]
   }
  ],
