--- a/namu_darbai_2.ipynb
+++ b/namu_darbai_2.ipynb
@@ -81,14 +81,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14944\n"
+      "14943.96\n"
      ]
     }
    ],
@@ -98,7 +98,7 @@
     "          \"inventory\": 1212 }\n",
     "markup = (x[\"sell_price\"] - x[\"cost_price\"])\n",
     "profit = markup * (x[\"inventory\"])\n",
-    "profit = round(profit)\n",
+    "profit = round(profit, 2)\n",
     "print(profit)\n",
     "\n"
    ]
