--- a/namu_darbai_1.ipynb
+++ b/namu_darbai_1.ipynb
@@ -51,13 +51,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['5', '4', '3', '2', '1']\n",
+      "['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos']\n"
+     ]
+    }
+   ],
    "source": [
     "a = ['1','2','3','4','5']\n",
     "b = ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos']\n",
     "c = ['100', '200', 40, 10]\n",
+    "\n",
+    "#nesuprantu pirmos dalies\n",
+    "\n",
+    "#saraso isrikiavimas\n",
+    "\n",
+    "a.sort(reverse=True)\n",
+    "print(a)\n",
+    "\n",
+    "\n",
+    "print(b)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
   }
