--- a/namu_darbai_1.ipynb
+++ b/namu_darbai_1.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
      "output_type": "stream",
      "text": [
       "['5', '4', '3', '2', '1']\n",
-      "['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos']\n"
+      "['vakaras', 'siandien uz lango', 'labas', 'kokia grazi diena', '10 laipsniu silumos']\n"
      ]
     }
    ],
@@ -68,22 +68,12 @@
     "b = ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos']\n",
     "c = ['100', '200', 40, 10]\n",
     "\n",
-    "#nesuprantu pirmos dalies\n",
+    "#nesuprantu sios dalies\n",
     "\n",
     "#saraso isrikiavimas\n",
     "\n",
     "a.sort(reverse=True)\n",
     "print(a)\n",
-    "\n",
-    "\n",
-    "print(b)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "\n"
    ]
