--- a/namu_darbai_1.ipynb
+++ b/namu_darbai_1.ipynb
@@ -9,9 +9,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fizz\n",
+      "Buzz\n",
+      "Fizz\n",
+      "FizzBuzz\n",
+      "Fizz\n",
+      "Buzz\n",
+      "Fizz\n",
+      "FizzBuzz\n",
+      "Fizz\n",
+      "Buzz\n",
+      "Fizz\n",
+      "FizzBuzz\n",
+      "Fizz\n",
+      "Buzz\n",
+      "Fizz\n",
+      "FizzBuzz\n",
+      "Fizz\n",
+      "Buzz\n",
+      "Fizz\n",
+      "FizzBuzz\n",
+      "Fizz\n",
+      "Buzz\n",
+      "Fizz\n",
+      "FizzBuzz\n",
+      "Fizz\n",
+      "Buzz\n",
+      "Fizz\n",
+      "FizzBuzz\n",
+      "Fizz\n",
+      "Buzz\n",
+      "Fizz\n",
+      "FizzBuzz\n",
+      "Fizz\n",
+      "Buzz\n",
+      "Fizz\n",
+      "FizzBuzz\n",
+      "Fizz\n",
+      "Buzz\n",
+      "Fizz\n",
+      "FizzBuzz\n",
+      "Fizz\n",
+      "Buzz\n",
+      "Fizz\n",
+      "FizzBuzz\n",
+      "Fizz\n",
+      "Buzz\n",
+      "Fizz\n",
+      "FizzBuzz\n",
+      "Fizz\n",
+      "Buzz\n",
+      "Fizz\n",
+      "FizzBuzz\n",
+      "Fizz\n",
+      "Buzz\n",
+      "Fizz\n",
+      "FizzBuzz\n",
+      "Fizz\n",
+      "Buzz\n",
+      "Fizz\n",
+      "FizzBuzz\n",
+      "Fizz\n",
+      "Buzz\n",
+      "Fizz\n",
+      "FizzBuzz\n",
+      "Fizz\n",
+      "Buzz\n",
+      "Fizz\n"
+     ]
+    }
+   ],
    "source": [
     "for number in range(1,101):\n",
     "    if (number % 2 == 0 and number % 3 == 0):\n",
@@ -31,9 +105,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "11\n"
+     ]
+    }
+   ],
    "source": [
     "number = int (input ('iveskite skaiciu'))\n",
     "if number >=10 :\n",
@@ -51,15 +141,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['5', '4', '3', '2', '1']\n",
-      "['vakaras', 'siandien uz lango', 'labas', 'kokia grazi diena', '10 laipsniu silumos']\n"
+      "['5', '4', '3', '2', '1']\n"
      ]
     }
    ],
