--- a/namu_darbai_1.ipynb
+++ b/namu_darbai_1.ipynb
@@ -141,14 +141,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['5', '4', '3', '2', '1']\n"
+      "['1', '2', '3', '4', '5'] ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'] ['100', '200', 40, 10]\n",
+      "[(['1', '2', '3', '4', '5'], ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10])]\n",
+      "False ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'] ['100', '200', 40, 10]\n",
+      "[(['1', '2', '3', '4', '5'], ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10]), (False, ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10])]\n",
+      "False ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'] ['100', '200', 40, 10]\n",
+      "[(['1', '2', '3', '4', '5'], ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10]), (False, ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10]), (False, ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10])]\n",
+      "False ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'] ['100', '200', 40, 10]\n",
+      "[(['1', '2', '3', '4', '5'], ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10]), (False, ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10]), (False, ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10]), (False, ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10])]\n",
+      "False ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'] ['100', '200', 40, 10]\n",
+      "[(['1', '2', '3', '4', '5'], ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10]), (False, ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10]), (False, ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10]), (False, ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10]), (False, ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10])]\n",
+      "False ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'] ['100', '200', 40, 10]\n",
+      "[(['1', '2', '3', '4', '5'], ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10]), (False, ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10]), (False, ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10]), (False, ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10]), (False, ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10]), (False, ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10])]\n",
+      "False ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'] ['100', '200', 40, 10]\n",
+      "[(['1', '2', '3', '4', '5'], ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10]), (False, ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10]), (False, ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10]), (False, ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10]), (False, ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10]), (False, ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10]), (False, ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10])]\n",
+      "False ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'] ['100', '200', 40, 10]\n",
+      "[(['1', '2', '3', '4', '5'], ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10]), (False, ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10]), (False, ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10]), (False, ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10]), (False, ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10]), (False, ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10]), (False, ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10]), (False, ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10])]\n",
+      "False ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'] ['100', '200', 40, 10]\n",
+      "[(['1', '2', '3', '4', '5'], ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10]), (False, ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10]), (False, ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10]), (False, ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10]), (False, ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10]), (False, ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10]), (False, ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10]), (False, ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10]), (False, ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos'], ['100', '200', 40, 10])]\n"
      ]
     }
    ],
@@ -157,12 +174,17 @@
     "b = ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos']\n",
     "c = ['100', '200', 40, 10]\n",
     "\n",
-    "#nesuprantu sios dalies\n",
+    "kombinacijos = []\n",
+    "for a in a, b in b, c in c:\n",
+    "    for a in a, b in b, c in c:\n",
+    "        print(a, b, c)\n",
+    "        kombinacijos.append( (a, b, c) )\n",
+    "        print( kombinacijos)\n",
     "\n",
-    "#saraso isrikiavimas\n",
+    "# a.sort(reverse=True)\n",
+    "#print(a)\n",
     "\n",
-    "a.sort(reverse=True)\n",
-    "print(a)\n",
+    "\n",
     "\n",
     "\n"
    ]
