--- a/namu_darbai_1.ipynb
+++ b/namu_darbai_1.ipynb
@@ -141,36 +141,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3569395985.py, line 6)",
+     "ename": "NameError",
+     "evalue": "name 'v' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/n7/nl3r51111bd91bmy_cbvf8100000gn/T/ipykernel_95214/3569395985.py\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    for a in a\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/n7/nl3r51111bd91bmy_cbvf8100000gn/T/ipykernel_95214/2829137250.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mv\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0maa\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'1'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'2'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'3'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'4'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'5'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mbb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'labas'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'vakaras'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'kokia grazi diena'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'siandien uz lango'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'10 laipsniu silumos'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mcc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'100'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'200'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m40\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'v' is not defined"
      ]
     }
    ],
    "source": [
-    "a = ['1','2','3','4','5']\n",
-    "b = ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos']\n",
-    "c = ['100', '200', 40, 10]\n",
+    "\n",
+    "\n",
+    "aa = ['1','2','3','4','5']\n",
+    "bb = ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos']\n",
+    "cc = ['100', '200', 40, 10]\n",
     "\n",
     "kombinacijos = []\n",
-    "for a in a and b and c:\n",
-    "    for b in a and b and c:\n",
-    "        for z in a and b and c:\n",
-    "                \n",
-    "            \n",
-    "            kombinacijos.append( (x, y, z) )\n",
-    "print( kombinacijos)\n",
+    "for a in aa:\n",
+    "    for b in bb:\n",
+    "        for c in cc:\n",
+    "            kombinacijos.append( (a,b,int(c) ) )\n",
     "\n",
-    "a.sort(reverse=True)\n",
-    "print(a)\n",
-    "\n",
-    "\n",
+    "kombinacijos.sort( key=lambda x: x[2], reverse=True )\n",
+    "print (kombinacijos)\n",
     "\n",
     "\n"
    ]
