--- a/namu_darbai_3.ipynb
+++ b/namu_darbai_3.ipynb
@@ -6,7 +6,6 @@
    "source": [
     "1. Parašykite funkciją, kuri priims string tipo kintamąjį, gražinkite kiek tame stringę yra raidžių, skaičių ir skyrybos (specialių) ženklų, tarpų.\n",
     "\n",
-    "\n",
     "simboliu_ieskotojas('vienas 2 ??’)\n",
     "\n",
     "Raidžių yra 6, skaičių yra 1, specialių simbolių yra 2"
@@ -14,10 +13,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2352812350.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/n7/nl3r51111bd91bmy_cbvf8100000gn/T/ipykernel_54246/2352812350.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    def simboliu_ieskotojas(vienas, \"2\", ??):\u001b[0m\n\u001b[0m                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "def simboliu_ieskotojas(vienas, 2, ??):\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labas\n"
+     ]
+    }
+   ],
+   "source": [
+    "simboliu_ieskotojas('Labas')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,18 +94,28 @@
     "Tarp skaiciu 18 ir 19 anomalijos nera \n",
     "Anomalija yra! Skaiciai 19 ir 21 nera einantys vienas po kito! Trukstamas skaicius yra 20"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.9 64-bit",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.9"
   },
   "orig_nbformat": 4
  },
