--- a/namu_darbai_3.ipynb
+++ b/namu_darbai_3.ipynb
@@ -13,37 +13,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 319,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2352812350.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/n7/nl3r51111bd91bmy_cbvf8100000gn/T/ipykernel_54246/2352812350.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    def simboliu_ieskotojas(vienas, \"2\", ??):\u001b[0m\n\u001b[0m                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def simboliu_ieskotojas(vienas, 2, ??):\n"
+    "\n",
+    "def function():\n",
+    "    simboliu_ieskotojas=('vienas 2 ??')\n",
+    "    letters_count = 0\n",
+    "    digits_count = 0\n",
+    "    cha_count = 0\n",
+    "    for i in simboliu_ieskotojas:\n",
+    "        if i.isalpha():\n",
+    "            letters_count +=1\n",
+    "    for i in simboliu_ieskotojas:\n",
+    "        if i.isdigit():\n",
+    "            digits_count +=1\n",
+    "        else:\n",
+    "            cha_count +=1\n",
+    "            print(f'Raidžių yra {letters_count}, skaičių yra {digits_count}, specialių simbolių yra {cha_count}')   \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Labas\n"
+      "Raidžių yra 6, skaičių yra 0, specialių simbolių yra 1\n",
+      "Raidžių yra 6, skaičių yra 0, specialių simbolių yra 2\n",
+      "Raidžių yra 6, skaičių yra 0, specialių simbolių yra 3\n",
+      "Raidžių yra 6, skaičių yra 0, specialių simbolių yra 4\n",
+      "Raidžių yra 6, skaičių yra 0, specialių simbolių yra 5\n",
+      "Raidžių yra 6, skaičių yra 0, specialių simbolių yra 6\n",
+      "Raidžių yra 6, skaičių yra 0, specialių simbolių yra 7\n",
+      "Raidžių yra 6, skaičių yra 1, specialių simbolių yra 8\n",
+      "Raidžių yra 6, skaičių yra 1, specialių simbolių yra 9\n",
+      "Raidžių yra 6, skaičių yra 1, specialių simbolių yra 10\n"
      ]
     }
    ],
    "source": [
-    "simboliu_ieskotojas('Labas')"
+    "function()"
    ]
   },
   {
