--- a/namu_darbai_3.ipynb
+++ b/namu_darbai_3.ipynb
@@ -13,46 +13,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 428,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "def function():\n",
     "    simboliu_ieskotojas=('vienas 2 ??')\n",
-    "    letters_count = 0\n",
-    "    digits_count = 0\n",
-    "    cha_count = 0\n",
+    "    raides = 0\n",
+    "    skaiciai = 0\n",
+    "    simboliai = 0\n",
     "    for i in simboliu_ieskotojas:\n",
     "        if i.isalpha():\n",
-    "            letters_count +=1\n",
-    "    for i in simboliu_ieskotojas:\n",
-    "        if i.isdigit():\n",
-    "            digits_count +=1\n",
+    "            raides +=1\n",
+    "        elif i.isdigit():\n",
+    "            skaiciai +=1\n",
     "        else:\n",
-    "            cha_count +=1\n",
-    "            print(f'Raidžių yra {letters_count}, skaičių yra {digits_count}, specialių simbolių yra {cha_count}')   \n"
+    "            if not i.isspace():\n",
+    "                simboliai +=1\n",
+    "    print(f'Raidžių yra {raides}, skaičių yra {skaiciai}, specialių simbolių yra {simboliai}')   \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 429,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raidžių yra 6, skaičių yra 0, specialių simbolių yra 1\n",
-      "Raidžių yra 6, skaičių yra 0, specialių simbolių yra 2\n",
-      "Raidžių yra 6, skaičių yra 0, specialių simbolių yra 3\n",
-      "Raidžių yra 6, skaičių yra 0, specialių simbolių yra 4\n",
-      "Raidžių yra 6, skaičių yra 0, specialių simbolių yra 5\n",
-      "Raidžių yra 6, skaičių yra 0, specialių simbolių yra 6\n",
-      "Raidžių yra 6, skaičių yra 0, specialių simbolių yra 7\n",
-      "Raidžių yra 6, skaičių yra 1, specialių simbolių yra 8\n",
-      "Raidžių yra 6, skaičių yra 1, specialių simbolių yra 9\n",
-      "Raidžių yra 6, skaičių yra 1, specialių simbolių yra 10\n"
+      "Raidžių yra 6, skaičių yra 1, specialių simbolių yra 2\n"
      ]
     }
    ],
