--- a/namu_darbai_3.ipynb
+++ b/namu_darbai_3.ipynb
@@ -63,10 +63,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 440,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 440,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def list_maker(start, end, step):\n",
+    "    list_made = list(range(start, end, step))\n",
+    "    return list_made\n",
+    "\n",
+    "list_start = int(input(\"Enter start number: \"))\n",
+    "list_end = int(input(\"Enter end number: \"))\n",
+    "list_step = int(input(\"Enter step: \"))\n",
+    "\n",
+    "list_maker(list_start, list_end, list_step)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -83,7 +104,37 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "list_1 = [7, 5, 4, 2, 9, 3]\n",
+    "\n",
+    "def function_1(list_inputed):\n",
+    "    list_inputed.sort()\n",
+    "    smallest_num = list_inputed[0]\n",
+    "    biggest_num = list_inputed[-1]\n",
+    "    difference = biggest_num - smallest_num\n",
+    "    return (f\"The difference between the smallest ({smallest_num}) and the biggest ({biggest_num}) numbers on the list was {difference}\")\n",
+    "\n",
+    "def function_2(list_inputed):\n",
+    "    smallest_num = min(list_inputed)\n",
+    "    biggest_num = max(list_inputed)\n",
+    "    return  biggest_num - smallest_num\n",
+    "\n",
+    "def my_function(*args):\n",
+    "    print (type(args))\n",
+    "    print (args)\n",
+    "    print (*args)\n",
+    "\n",
+    "    # mylist=[*args]\n",
+    "    mylist = list(args)\n",
+    "    mylist.sort()\n",
+    "    skirtumas= mylist[-1]-mylist[0]\n",
+    "    return (f'{args} -> {skirtumas}')\n",
+    "\n",
+    "print (my_function(1, 5, 6, 10, 4) )\n",
+    "\n",
+    "print (function_1(list_1) )\n",
+    "print (function_2(list_1) )"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -98,6 +149,28 @@
     "Tarp skaiciu 17 ir 18 anomalijos nera \n",
     "Tarp skaiciu 18 ir 19 anomalijos nera \n",
     "Anomalija yra! Skaiciai 19 ir 21 nera einantys vienas po kito! Trukstamas skaicius yra 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_2 = [7, 8, 9, 10, 11, 12, 17, 18, 19]\n",
+    "def anomaly_checker_a_4(list_given):\n",
+    "\n",
+    "    list_1 = list_given[:-1]\n",
+    "    list_2 = list_given[1:]\n",
+    "    for number_l, number_r in zip(list_1, list_2):\n",
+    "        if number_l + 1 == number_r:\n",
+    "            print(f'Tarp skaiciu {number_l} ir {number_r} anomalijos nera')\n",
+    "        else:\n",
+    "            numbers_missing = list(range(number_l + 1, number_r ) )\n",
+    "            print(f\"Anomalija yra! Skaičiai {number_l} ir {number_r} nėra einantys vienas po kito! Trūksta {numbers_missing}.\")\n",
+    "\n",
+    "\n",
+    "anomaly_checker_a_4(list_2)"
    ]
   }
  ],
