--- a/namu_darbai_4.ipynb
+++ b/namu_darbai_4.ipynb
@@ -7,12 +7,14 @@
    "outputs": [],
    "source": [
     "class Sparagai:\n",
-    "    def __init__(self, veisle, spalva, kiekis,):\n",
+    "    def __init__(self, veisle, spalva, kiekis, klientas=None, :\n",
     "        self.veisle = veisle\n",
     "        self.spalva = spalva\n",
     "        self.kiekis = kiekis\n",
+    "        self.klientas = klientas\n",
+    "        \n",
     "\n",
-    "    def set_savininkas(self, naujas_savininkas, terminas):\n",
+    "    def set klientas(self, naujas_savininkas, terminas):\n",
     "        self._savininkas = naujas_savininkas\n",
     "        self._grazinimo_terminas = terminas\n",
     "\n",
@@ -22,6 +24,21 @@
     "    def __repr__(self):\n",
     "        return f\"\"\" '{self.pavadinimas}', {self.autorius}, {self.metai} m. \"\"\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class '__main__.Sparagai'>\n"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
