--- a/lesson_4.ipynb
+++ b/lesson_4.ipynb
@@ -142,7 +142,7 @@
    ],
    "source": [
     "my_bool = False\n",
-    "if my_bool = True: # error\n",
+    "#if my_bool = True: # error\n",
     "if my_bool == True:\n",
     "    print ('it is true')\n"
    ]
