--- a/namu_darbai_4.ipynb
+++ b/namu_darbai_4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
        "[367 rows x 8 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -238,9 +238,6 @@
        "      <th>tourniment</th>\n",
        "      <th>city</th>\n",
        "      <th>country</th>\n",
-       "      <th>score_sum</th>\n",
-       "      <th>score_diff</th>\n",
-       "      <th>total_sum</th>\n",
        "      <th>total_score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -256,9 +253,6 @@
        "      <td>Moscow</td>\n",
        "      <td>Soviet Union</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -270,9 +264,6 @@
        "      <td>Friendly</td>\n",
        "      <td>Moscow</td>\n",
        "      <td>Soviet Union</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -286,9 +277,6 @@
        "      <td>Moscow</td>\n",
        "      <td>Soviet Union</td>\n",
        "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -300,9 +288,6 @@
        "      <td>Friendly</td>\n",
        "      <td>Moscow</td>\n",
        "      <td>Soviet Union</td>\n",
-       "      <td>2</td>\n",
-       "      <td>-2</td>\n",
-       "      <td>2</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -316,15 +301,9 @@
        "      <td>Moscow</td>\n",
        "      <td>Soviet Union</td>\n",
        "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -346,9 +325,6 @@
        "      <td>Vilnius</td>\n",
        "      <td>Lithuania</td>\n",
        "      <td>6</td>\n",
-       "      <td>-4</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>363</th>\n",
@@ -360,9 +336,6 @@
        "      <td>UEFA Euro qualification</td>\n",
        "      <td>Kharkiv</td>\n",
        "      <td>Ukraine</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -376,9 +349,6 @@
        "      <td>Kharkiv</td>\n",
        "      <td>Ukraine</td>\n",
        "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>365</th>\n",
@@ -390,9 +360,6 @@
        "      <td>UEFA Euro qualification</td>\n",
        "      <td>Vilnius</td>\n",
        "      <td>Lithuania</td>\n",
-       "      <td>3</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>3</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -406,13 +373,10 @@
        "      <td>Vilnius</td>\n",
        "      <td>Lithuania</td>\n",
        "      <td>3</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>367 rows × 12 columns</p>\n",
+       "<p>367 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -429,36 +393,23 @@
        "365  2019-10-14   Lithuania     Serbia           1           2   \n",
        "366  2019-10-14   Lithuania     Serbia           1           2   \n",
        "\n",
-       "                  tourniment     city       country  score_sum  score_diff  \\\n",
-       "0                   Friendly   Moscow  Soviet Union          0           0   \n",
-       "1                   Friendly   Moscow  Soviet Union          5           5   \n",
-       "2                   Friendly   Moscow  Soviet Union          1          -1   \n",
-       "3                   Friendly   Moscow  Soviet Union          2          -2   \n",
-       "4                   Friendly   Moscow  Soviet Union          2           2   \n",
-       "..                       ...      ...           ...        ...         ...   \n",
-       "362  UEFA Euro qualification  Vilnius     Lithuania          6          -4   \n",
-       "363  UEFA Euro qualification  Kharkiv       Ukraine          2           2   \n",
-       "364  UEFA Euro qualification  Kharkiv       Ukraine          2           2   \n",
-       "365  UEFA Euro qualification  Vilnius     Lithuania          3          -1   \n",
-       "366  UEFA Euro qualification  Vilnius     Lithuania          3          -1   \n",
+       "                  tourniment     city       country  total_score  \n",
+       "0                   Friendly   Moscow  Soviet Union            0  \n",
+       "1                   Friendly   Moscow  Soviet Union            5  \n",
+       "2                   Friendly   Moscow  Soviet Union            1  \n",
+       "3                   Friendly   Moscow  Soviet Union            2  \n",
+       "4                   Friendly   Moscow  Soviet Union            2  \n",
+       "..                       ...      ...           ...          ...  \n",
+       "362  UEFA Euro qualification  Vilnius     Lithuania            6  \n",
+       "363  UEFA Euro qualification  Kharkiv       Ukraine            2  \n",
+       "364  UEFA Euro qualification  Kharkiv       Ukraine            2  \n",
+       "365  UEFA Euro qualification  Vilnius     Lithuania            3  \n",
+       "366  UEFA Euro qualification  Vilnius     Lithuania            3  \n",
        "\n",
-       "     total_sum  total_score  \n",
-       "0            0            0  \n",
-       "1            5            5  \n",
-       "2            1            1  \n",
-       "3            2            2  \n",
-       "4            2            2  \n",
-       "..         ...          ...  \n",
-       "362          6            6  \n",
-       "363          2            2  \n",
-       "364          2            2  \n",
-       "365          3            3  \n",
-       "366          3            3  \n",
-       "\n",
-       "[367 rows x 12 columns]"
+       "[367 rows x 9 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -504,9 +455,6 @@
        "      <th>tourniment</th>\n",
        "      <th>city</th>\n",
        "      <th>country</th>\n",
-       "      <th>score_sum</th>\n",
-       "      <th>score_diff</th>\n",
-       "      <th>total_sum</th>\n",
        "      <th>total_score</th>\n",
        "      <th>diff_score</th>\n",
        "    </tr>\n",
@@ -524,9 +472,6 @@
        "      <td>Soviet Union</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -538,9 +483,6 @@
        "      <td>Friendly</td>\n",
        "      <td>Moscow</td>\n",
        "      <td>Soviet Union</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
        "      <td>5</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
@@ -556,9 +498,6 @@
        "      <td>Soviet Union</td>\n",
        "      <td>1</td>\n",
        "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -570,9 +509,6 @@
        "      <td>Friendly</td>\n",
        "      <td>Moscow</td>\n",
        "      <td>Soviet Union</td>\n",
-       "      <td>2</td>\n",
-       "      <td>-2</td>\n",
-       "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>-2</td>\n",
        "    </tr>\n",
@@ -588,15 +524,9 @@
        "      <td>Soviet Union</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -620,9 +550,6 @@
        "      <td>Lithuania</td>\n",
        "      <td>6</td>\n",
        "      <td>-4</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
-       "      <td>-4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>363</th>\n",
@@ -634,9 +561,6 @@
        "      <td>UEFA Euro qualification</td>\n",
        "      <td>Kharkiv</td>\n",
        "      <td>Ukraine</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
@@ -652,9 +576,6 @@
        "      <td>Ukraine</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>365</th>\n",
@@ -666,9 +587,6 @@
        "      <td>UEFA Euro qualification</td>\n",
        "      <td>Vilnius</td>\n",
        "      <td>Lithuania</td>\n",
-       "      <td>3</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>-1</td>\n",
        "    </tr>\n",
@@ -684,13 +602,10 @@
        "      <td>Lithuania</td>\n",
        "      <td>3</td>\n",
        "      <td>-1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>-1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>367 rows × 13 columns</p>\n",
+       "<p>367 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -707,36 +622,23 @@
        "365  2019-10-14   Lithuania     Serbia           1           2   \n",
        "366  2019-10-14   Lithuania     Serbia           1           2   \n",
        "\n",
-       "                  tourniment     city       country  score_sum  score_diff  \\\n",
-       "0                   Friendly   Moscow  Soviet Union          0           0   \n",
-       "1                   Friendly   Moscow  Soviet Union          5           5   \n",
-       "2                   Friendly   Moscow  Soviet Union          1          -1   \n",
-       "3                   Friendly   Moscow  Soviet Union          2          -2   \n",
-       "4                   Friendly   Moscow  Soviet Union          2           2   \n",
-       "..                       ...      ...           ...        ...         ...   \n",
-       "362  UEFA Euro qualification  Vilnius     Lithuania          6          -4   \n",
-       "363  UEFA Euro qualification  Kharkiv       Ukraine          2           2   \n",
-       "364  UEFA Euro qualification  Kharkiv       Ukraine          2           2   \n",
-       "365  UEFA Euro qualification  Vilnius     Lithuania          3          -1   \n",
-       "366  UEFA Euro qualification  Vilnius     Lithuania          3          -1   \n",
+       "                  tourniment     city       country  total_score  diff_score  \n",
+       "0                   Friendly   Moscow  Soviet Union            0           0  \n",
+       "1                   Friendly   Moscow  Soviet Union            5           5  \n",
+       "2                   Friendly   Moscow  Soviet Union            1          -1  \n",
+       "3                   Friendly   Moscow  Soviet Union            2          -2  \n",
+       "4                   Friendly   Moscow  Soviet Union            2           2  \n",
+       "..                       ...      ...           ...          ...         ...  \n",
+       "362  UEFA Euro qualification  Vilnius     Lithuania            6          -4  \n",
+       "363  UEFA Euro qualification  Kharkiv       Ukraine            2           2  \n",
+       "364  UEFA Euro qualification  Kharkiv       Ukraine            2           2  \n",
+       "365  UEFA Euro qualification  Vilnius     Lithuania            3          -1  \n",
+       "366  UEFA Euro qualification  Vilnius     Lithuania            3          -1  \n",
        "\n",
-       "     total_sum  total_score  diff_score  \n",
-       "0            0            0           0  \n",
-       "1            5            5           5  \n",
-       "2            1            1          -1  \n",
-       "3            2            2          -2  \n",
-       "4            2            2           2  \n",
-       "..         ...          ...         ...  \n",
-       "362          6            6          -4  \n",
-       "363          2            2           2  \n",
-       "364          2            2           2  \n",
-       "365          3            3          -1  \n",
-       "366          3            3          -1  \n",
-       "\n",
-       "[367 rows x 13 columns]"
+       "[367 rows x 10 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,75 +652,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "73\n"
+     ]
+    }
+   ],
    "source": [
     "# Kiek rungtynių baigėsi lygiosiomis?\n",
+    "\n",
+    "draw_score = df[ df[ 'diff_score' ] == 0 ]\n",
+    "print(len(draw_score))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "date                             2000-10-11\n",
+       "home_team                         Lithuania\n",
+       "away_team                           Hungary\n",
+       "home_score                                1\n",
+       "away_score                                6\n",
+       "tourniment     FIFA World Cup qualification\n",
+       "city                                 Kaunas\n",
+       "country                           Lithuania\n",
+       "total_score                               7\n",
+       "diff_score                               -5\n",
+       "Name: 108, dtype: object"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Kokiai šaliai pralošėme didžiausiu  ivarčių skirtumu, žaisdami namuose, kada tai įvyko, kokiame mieste vyko rungtynės?\n",
+    "\n",
+    "\n",
+    "df.sort_values(by='diff_score')\n",
+    "df_sorted[ df_sorted['home_team'] == 'Lithuania' ]\n",
+    "df.iloc[108]\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "68\n"
+     ]
+    }
+   ],
    "source": [
-    "# Kokiai šaliai pralošėme didžiausiu  ivarčių skirtumu, žaisdami namuose, kada tai įvyko, kokiame mieste vyko rungtynės?\n"
+    "# Kiek rungtynių Lietuva pralaimėjo žaisdama Lietuvoje?\n",
+    "\n",
+    "lost_home = df[ (df['home_team'] == 'Lithuania') & ( df['diff_score'] < 0) ]\n",
+    "print(len(lost_home))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "31\n"
+     ]
+    }
+   ],
    "source": [
-    "# Kiek rungtynių Lietuva praleimėjo žaisdama Lietuvoje?\n"
+    "# Kiek rungtynių Lietuviai sužaidė lygiosiomis namuose?\n",
+    "\n",
+    "draw_home = df[ (df['home_team'] == 'Lithuania') & ( df['diff_score'] == 0) ]\n",
+    "print(len(draw_home))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42\n"
+     ]
+    }
+   ],
    "source": [
-    "# Kiek rungtynių Lietuviai sužaidė lygiosiomis namuose?\n"
+    "# Kiek rungtynių Lietuviai sužaidė lygiosiomis išvykoje?\n",
+    "\n",
+    "draw_away = df[ (df['away_team'] == 'Lithuania') & ( df['diff_score'] == 0) ]\n",
+    "print(len(draw_away))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "138\n"
+     ]
+    }
+   ],
    "source": [
-    "# Kiek rungtynių Lietuviai sužaidė lygiosiomis išvykoje?\n"
+    "# Kiek rungtynių Lietuva pralaimėjo žaisdama svetur?\n",
+    "\n",
+    "lost_away = df[ (df['away_team'] == 'Lithuania') & ( df['diff_score'] > 0) ]\n",
+    "print(len(lost_away))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "39\n"
+     ]
+    }
+   ],
    "source": [
-    "# Kiek rungtynių Lietuva pralaimėjo žaisdama svetur?\n"
+    "# Kiek rungtynių Lietuva laimėjo žaisdama svetur?\n",
+    "\n",
+    "away_win = df[ (df['away_team'] == 'Lithuania') & ( df['diff_score'] < 0) ]\n",
+    "print(len(away_win))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "49\n"
+     ]
+    }
+   ],
    "source": [
-    "# Kiek rungtynių Lietuva laimėjo žaisdama svetur?\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Kiek rungtynių Lietuva laimėjo žaisdama Lietuvoje?"
+    "# Kiek rungtynių Lietuva laimėjo žaisdama Lietuvoje?\n",
+    "\n",
+    "home_win = df[ (df['home_team'] == 'Lithuania') & ( df['diff_score'] > 0) ]\n",
+    "print(len(home_win))\n"
    ]
   }
  ],
